--- a/merch.html
+++ b/merch.html
@@ -20,12 +20,12 @@
       </div>
     </nav>
     <div class="lines">
-      <img src="images/line1.svg" class="one">
-      <img src="images/line2.svg" class="two">
-      <img src="images/line3.svg" class="three">
-      <img src="images/line4.svg" class="four">
-      <img src="images/line5.svg" class="five">
-      <img src="images/line6.svg" class="six">
+      <img src="images/line1.svg" class="line1">
+      <img src="images/line2.svg" class="line2">
+      <img src="images/line3.svg" class="line3">
+      <img src="images/line4.svg" class="line4">
+      <img src="images/line5.svg" class="line5">
+      <img src="images/line6.svg" class="line6">
     </div>
     <div class="merchh">
       <img src="images/kepka.svg" class="kep">
